Update for webjam

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>Alexander Liu</h1>
-    <p class="bold-paragraph">
-      And this is a paragraph with <b id="bold">bold</b> text.
-    </p>
+    <h1>WebJam 24 Demo</h1>
+    <p class="bold-paragraph">Hellow from webjam <b id="bold">24</b>.</p>
     <img
-      src="./photos/cascade-mountain.jpeg"
+      src="./photos/cascade-mountainhj.jpeg"
       alt="view from the top of the cascade mountain peak"
     />
     <img
@@ -22,10 +20,10 @@
       src="./photos/niagara-falls.jpeg"
       alt="the canadian side of niagara falls"
     />
-    <img
-      src="./photos/eden.jpeg"
-      alt="a windowsill full of plants in front a snowy window"
-    />
+    <img />
+    src="./photos/eden.jpeg" alt="a windowsill full of plants in front a snowy
+    window"
+    <img />
     <img
       src="./photos/getty-center.jpeg"
       alt="a tall tree sculpture at the getty"
